--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,176 @@
 /build
+resultTest.txt
+/src/main/res/drawable/_8001.xml
+/src/main/res/drawable/_4e0a.xml
+/src/main/res/drawable/_4e0b.xml
+/src/main/res/drawable/_4e0d.xml
+/src/main/res/drawable/_4e00.xml
+/src/main/res/drawable/_4e1c.xml
+/src/main/res/drawable/_4e2a.xml
+/src/main/res/drawable/_4e2d.xml
+/src/main/res/drawable/_4e3e.xml
+/src/main/res/drawable/_4e03.xml
+/src/main/res/drawable/_4e5d.xml
+/src/main/res/drawable/_4e8c.xml
+/src/main/res/drawable/_4e9b.xml
+/src/main/res/drawable/_4e09.xml
+/src/main/res/drawable/_4e48.xml
+/src/main/res/drawable/_4e60.xml
+/src/main/res/drawable/_4e66.xml
+/src/main/res/drawable/_4e70.xml
+/src/main/res/drawable/_4e86.xml
+/src/main/res/drawable/_4e94.xml
+/src/main/res/drawable/_4eac.xml
+/src/main/res/drawable/_4eae.xml
+/src/main/res/drawable/_4eba.xml
+/src/main/res/drawable/_4ec0.xml
+/src/main/res/drawable/_4eca.xml
+/src/main/res/drawable/_4ed6.xml
+/src/main/res/drawable/_4eec.xml
+/src/main/res/drawable/_4f1a.xml
+/src/main/res/drawable/_4f4f.xml
+/src/main/res/drawable/_4f5c.xml
+/src/main/res/drawable/_4f60.xml
+/src/main/res/drawable/_5b50.xml
+/src/main/res/drawable/_5b57.xml
+/src/main/res/drawable/_5b66.xml
+/src/main/res/drawable/_5ba2.xml
+/src/main/res/drawable/_5bb6.xml
+/src/main/res/drawable/_5bf9.xml
+/src/main/res/drawable/_5c0f.xml
+/src/main/res/drawable/_5c11.xml
+/src/main/res/drawable/_5de5.xml
+/src/main/res/drawable/_5e08.xml
+/src/main/res/drawable/_5e74.xml
+/src/main/res/drawable/_5e97.xml
+/src/main/res/drawable/_5f00.xml
+/src/main/res/drawable/_5f71.xml
+/src/main/res/drawable/_5f88.xml
+/src/main/res/drawable/_6b22.xml
+/src/main/res/drawable/_6c14.xml
+/src/main/res/drawable/_6c34.xml
+/src/main/res/drawable/_6c49.xml
+/src/main/res/drawable/_6ca1.xml
+/src/main/res/drawable/_6f02.xml
+/src/main/res/drawable/_7c73.xml
+/src/main/res/drawable/_7cfb.xml
+/src/main/res/drawable/_8ba4.xml
+/src/main/res/drawable/_8bc6.xml
+/src/main/res/drawable/_8bdd.xml
+/src/main/res/drawable/_8bed.xml
+/src/main/res/drawable/_8bf4.xml
+/src/main/res/drawable/_8bf7.xml
+/src/main/res/drawable/_8bfb.xml
+/src/main/res/drawable/_8c01.xml
+/src/main/res/drawable/_8c22.xml
+/src/main/res/drawable/_8d77.xml
+/src/main/res/drawable/_8f66.xml
+/src/main/res/drawable/_8fd9.xml
+/src/main/res/drawable/_9ad8.xml
+/src/main/res/drawable/_51b7.xml
+/src/main/res/drawable/_51e0.xml
+/src/main/res/drawable/_51fa.xml
+/src/main/res/drawable/_53bb.xml
+/src/main/res/drawable/_53cb.xml
+/src/main/res/drawable/_53eb.xml
+/src/main/res/drawable/_53f7.xml
+/src/main/res/drawable/_54ea.xml
+/src/main/res/drawable/_56db.xml
+/src/main/res/drawable/_56de.xml
+/src/main/res/drawable/_56fd.xml
+/src/main/res/drawable/_59d0.xml
+/src/main/res/drawable/_60f3.xml
+/src/main/res/drawable/_65f6.xml
+/src/main/res/drawable/_70b9.xml
+/src/main/res/drawable/_70ed.xml
+/src/main/res/drawable/_72d7.xml
+/src/main/res/drawable/_73b0.xml
+/src/main/res/drawable/_79df.xml
+/src/main/res/drawable/_80fd.xml
+/src/main/res/drawable/_82f9.xml
+/src/main/res/drawable/_83dc.xml
+/src/main/res/drawable/_89c1.xml
+/src/main/res/drawable/_89c6.xml
+/src/main/res/drawable/_89c9.xml
+/src/main/res/drawable/_90a3.xml
+/src/main/res/drawable/_90fd.xml
+/src/main/res/drawable/_91cc.xml
+/src/main/res/drawable/_94b1.xml
+/src/main/res/drawable/_96e8.xml
+/src/main/res/drawable/_98de.xml
+/src/main/res/drawable/_505a.xml
+/src/main/res/drawable/_513f.xml
+/src/main/res/drawable/_516b.xml
+/src/main/res/drawable/_516d.xml
+/src/main/res/drawable/_518d.xml
+/src/main/res/drawable/_524d.xml
+/src/main/res/drawable/_533b.xml
+/src/main/res/drawable/_540c.xml
+/src/main/res/drawable/_540d.xml
+/src/main/res/drawable/_540e.xml
+/src/main/res/drawable/_542c.xml
+/src/main/res/drawable/_548c.xml
+/src/main/res/drawable/_559c.xml
+/src/main/res/drawable/_559d.xml
+/src/main/res/drawable/_591a.xml
+/src/main/res/drawable/_592a.xml
+/src/main/res/drawable/_597d.xml
+/src/main/res/drawable/_600e.xml
+/src/main/res/drawable/_660e.xml
+/src/main/res/drawable/_661f.xml
+/src/main/res/drawable/_662f.xml
+/src/main/res/drawable/_670b.xml
+/src/main/res/drawable/_670d.xml
+/src/main/res/drawable/_671f.xml
+/src/main/res/drawable/_672c.xml
+/src/main/res/drawable/_673a.xml
+/src/main/res/drawable/_676f.xml
+/src/main/res/drawable/_679c.xml
+/src/main/res/drawable/_684c.xml
+/src/main/res/drawable/_732b.xml
+/src/main/res/drawable/_751f.xml
+/src/main/res/drawable/_770b.xml
+/src/main/res/drawable/_897f.xml
+/src/main/res/drawable/_949f.xml
+/src/main/res/drawable/_996d.xml
+/src/main/res/drawable/_5019.xml
+/src/main/res/drawable/_5148.xml
+/src/main/res/drawable/_5173.xml
+/src/main/res/drawable/_5174.xml
+/src/main/res/drawable/_5199.xml
+/src/main/res/drawable/_5206.xml
+/src/main/res/drawable/_5317.xml
+/src/main/res/drawable/_5341.xml
+/src/main/res/drawable/_5348.xml
+/src/main/res/drawable/_5403.xml
+/src/main/res/drawable/_5417.xml
+/src/main/res/drawable/_5462.xml
+/src/main/res/drawable/_5546.xml
+/src/main/res/drawable/_5582.xml
+/src/main/res/drawable/_5728.xml
+/src/main/res/drawable/_5750.xml
+/src/main/res/drawable/_5757.xml
+/src/main/res/drawable/_5927.xml
+/src/main/res/drawable/_5929.xml
+/src/main/res/drawable/_5973.xml
+/src/main/res/drawable/_5979.xml
+/src/main/res/drawable/_5988.xml
+/src/main/res/drawable/_6211.xml
+/src/main/res/drawable/_6253.xml
+/src/main/res/drawable/_6628.xml
+/src/main/res/drawable/_6708.xml
+/src/main/res/drawable/_6709.xml
+/src/main/res/drawable/_6765.xml
+/src/main/res/drawable/_6821.xml
+/src/main/res/drawable/_6837.xml
+/src/main/res/drawable/_6905.xml
+/src/main/res/drawable/_7231.xml
+/src/main/res/drawable/_7238.xml
+/src/main/res/drawable/_7535.xml
+/src/main/res/drawable/_7684.xml
+/src/main/res/drawable/_7761.xml
+/src/main/res/drawable/_8111.xml
+/src/main/res/drawable/_8336.xml
+/src/main/res/drawable/_8863.xml
+/src/main/res/drawable/_9662.xml
+/src/main/res/drawable/_9762.xml
