--- a/app/.gitignore
+++ b/app/.gitignore
@@ -174,3 +174,4 @@ resultTest.txt
 /src/main/res/drawable/_8863.xml
 /src/main/res/drawable/_9662.xml
 /src/main/res/drawable/_9762.xml
+/src/main/assets/result.txt
