--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ local.properties
 /.idea/migrations.xml
 /Assetsus/puzzle_active.svg
 /Assetsus/draw_active.svg
+/.idea/deploymentTargetDropDown.xml
