--- a/app/.gitignore
+++ b/app/.gitignore
@@ -174,7 +174,7 @@ resultTest.txt
 /src/main/res/drawable/_8863.xml
 /src/main/res/drawable/_9662.xml
 /src/main/res/drawable/_9762.xml
-/src/main/assets/result.txt
+/src/main/assets/dictionary.txt
 /src/main/assets/resultsJSON1.json
 /src/main/assets/resultsJSON2.json
 /src/main/assets/resultsJSON1_backup.json
