--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,20 @@ android {
 dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+    implementation 'androidx.room:room-rxjava3:2.5.2'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
