--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -38,16 +39,30 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.2"
     annotationProcessor "androidx.room:room-compiler:2.5.2"
     implementation 'androidx.room:room-rxjava3:2.5.2'
+
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
     implementation 'com.google.code.gson:gson:2.10.1'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
+
     implementation 'com.google.android.material:material:1.10.0'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
+
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
     implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
+    implementation "androidx.navigation:navigation-fragment:2.7.4"
+    implementation "androidx.navigation:navigation-ui:2.7.4"
+
+    implementation 'androidx.fragment:fragment:1.6.1'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
