--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,16 +13,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".views.DictionaryActivity"
+            android:name=".views.SchoolActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.DefinitionWordActivity"
             android:exported="false" />
         <activity
             android:name=".views.HanziWritingActivity"
             android:exported="false" />
         <activity
             android:name=".views.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
