--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,41 +38,22 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
-    implementation "androidx.navigation:navigation-fragment:2.7.4"
-    implementation "androidx.navigation:navigation-ui:2.7.4"
+
+    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
+
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+
     implementation 'androidx.fragment:fragment:1.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.2'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.navigation:navigation-ui:2.7.4'
     implementation 'androidx.lifecycle:lifecycle-runtime:2.6.2'
-    implementation "androidx.room:room-runtime:2.5.2"
-    annotationProcessor "androidx.room:room-compiler:2.5.2"
-
-    /*
-    // Text features
-    implementation 'com.google.mlkit:text-recognition:16.0.0'
-    implementation 'com.google.mlkit:text-recognition-chinese:16.0.0'
-
-    //Camera
-    implementation 'com.google.mlkit:camera:16.0.0-beta3'
-    // CameraX
-    implementation "androidx.camera:camera-camera2:1.4.0-alpha01"
-    implementation "androidx.camera:camera-lifecycle:1.4.0-alpha01"
-    implementation "androidx.camera:camera-view:1.4.0-alpha01"
-
-    // On Device Machine Learnings
-    implementation "com.google.android.odml:image:1.0.0-beta1"
-
-    // Object detection feature with bundled default classifier
-    implementation 'com.google.mlkit:object-detection:17.0.0'
-
-    // Object detection feature with custom classifier support
-    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
-    */
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.2'
+    implementation 'androidx.navigation:navigation-fragment:2.7.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.room:room-runtime:2.5.2'
+    annotationProcessor 'androidx.room:room-compiler:2.5.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
