--- a/build.gradle
+++ b/build.gradle
@@ -2,4 +2,5 @@
 plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'com.android.library' version '8.1.2' apply false
+    id "de.mannodermaus.android-junit5" version "1.9.3.0" apply false
 }
