--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
-    id "org.jetbrains.kotlin.android"
-    id "com.google.devtools.ksp"
+    id 'org.jetbrains.kotlin.android'
+    id 'com.google.devtools.ksp'
     //id 'de.mannodermaus.android-junit5'
 }
 
@@ -23,6 +23,14 @@ android {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.3"
     }
 
     viewBinding {
@@ -51,6 +59,13 @@ android {
 }
 
 dependencies {
+
+    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation 'androidx.compose.material:material:1.5.4'
+    implementation 'androidx.compose.runtime:runtime:1.5.4'
+    implementation 'androidx.compose.compiler:compiler:1.5.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.4'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.4'
 
     implementation 'androidx.core:core-ktx:1.12.0'
 
