--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ local.properties
 /app/src/main/assets/polishJSON.json
 /app/src/main/assets/dictionaryModel.db
 /hs_err_pid18472.log
+/app/src/main/assets/temple_x_2.jpg
