--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,11 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
@@ -58,24 +59,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation 'androidx.activity:activity-compose:1.8.1'
     implementation 'androidx.compose.material3:material3:1.1.2'
     implementation 'androidx.compose.material:material-android:1.5.4'
     implementation 'androidx.compose.runtime:runtime:1.5.4'
-    implementation 'androidx.compose.compiler:compiler:1.5.3'
+    implementation 'androidx.compose.compiler:compiler:1.5.4'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.5.4'
+    implementation 'androidx.activity:activity-ktx:1.8.1'
     implementation 'androidx.activity:activity:1.8.0'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.5.4'
 
     implementation 'androidx.core:core-ktx:1.12.0'
 
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
-
-    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
