--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,13 @@
         android:theme="@style/Theme.App.Starting"
         tools:targetApi="34">
         <activity
+            android:name=".views.AboutActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SignalyChinese" />
+        <activity
             android:name=".views.SchoolWritingActivity"
-            android:theme="@style/Theme.SignalyChinese"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.SignalyChinese" />
         <activity
             android:name=".views.HistoryActivity"
             android:exported="false"
