--- a/app/.gitignore
+++ b/app/.gitignore
@@ -7095,3 +7095,4 @@ resultTest.txt
 /src/main/assets/temple.jpg
 /src/main/assets/temple_x.jpg
 /src/main/assets/cat.jpg
+/src/main/assets/temple_x_3.jpg
